unpackaged/main/default/objects/APXTConga4__VersionedData__c/APXTConga4__VersionedData__c.object-meta.xml
<CustomObject>
    <label>VersionedData</label>
    <nameField>
        <label>Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VersionedData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>