unpackaged/main/default/objects/APXTConga4__VersionedData__c/fields/APXTConga4__Raw__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Raw__c</fullName>
    <label>Raw Flag Object</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>