unpackaged/main/default/objects/APXTConga4__VersionedData__c/fields/APXTConga4__Version__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Version__c</fullName>
    <label>Flag Version</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>